# weighted-icp-correspondences

./: .gitignore  CMakeLists.txt  README.md  alignment_experiments.cpp  build.sh  config.yaml  experiments_data.ods  install_dependencies.sh  map_fr1_desk.txt  run_experiments.sh  weighted_correspondence_estimation.h
